Added hyperlink to sample css file.

--- a/demo/index.html
+++ b/demo/index.html
@@ -30,6 +30,11 @@
     <div class="square"></div>
 
     </br>
+    
+    <p>Get a sample css file to apply <a href="apply-this.css" target="_blank" title="Sample css file">here!</a></p>
+    
+    </br>
+    </br>
 
     <input type="file" id="css-file" name="files[]" accept="text/css"/>
     </br>
