--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,7 @@
             color: red;
         }
 
-        p{
+        p.subheader{
             background-color: black;
             color: white;
         }
@@ -25,7 +25,7 @@
 <body>
 
     <h1>Hello World</h1>
-    <p>Some Content, Lorem Ipsum dolor sit.</p>
+    <p class="subheader">Some Content, Lorem Ipsum dolor sit.</p>
 
     <div class="square"></div>
 
