--- a/demo/index.html
+++ b/demo/index.html
@@ -31,7 +31,7 @@
 
     </br>
     
-    <p>Get a sample css file to apply <a href="apply-this.css" target="_blank" title="Sample css file">here!</a></p>
+    <p>Get a sample css file to apply <a href="apply-this.css" target="_blank" title="Sample css file">here!</a> (Save the file to your local disk)</p>
     
     </br>
     </br>
