Changed linked css stylesheet to download directlyto disk.

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,8 +31,7 @@
 
     </br>
     
-    <p>Get a sample css file to apply <a href="apply-this.css" target="_blank" title="Sample css file">here!</a> (Save the file to your local disk)</p>
-    
+    <p>Get a sample css file to apply <a href="https://raw.githubusercontent.com/RicoBrase/mystyle-js/master/demo/apply-this.css" target="_blank" title="Sample css file" download>here</a>!</p>
     </br>
     </br>
 
